// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NextLink renders next link as an anchor tag 1`] = `
<a
  aria-label=""
  className="jsx-3574172415"
  href="/href-link/a-test"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  <div
    className="something-to-link"
  />
</a>
`;

exports[`NextLink renders next link as an anchor tag with aria-label 1`] = `
<a
  aria-label="link title"
  className="jsx-3574172415"
  href="/href-link/a-test"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  <div
    className="something-to-link"
  />
</a>
`;
